--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - name: checkout repository code
         uses: actions/checkout@v4
-      - run: echo "$(echo hello_world.txt)"  
+      - run: echo "$(cat hello_world.txt)"  
         
     
